@@ -1,0 +1,11 @@
+
+<title>Donate</title>
+
+<h1>Help LilyPond development</h1>
+
+Help LilyPond development by donating money, or buying new features.
+
+<em>Yes, I realize that there is no PayPal button here yet.
+Please come back later, and don't spend your money on something else :-)
+
+</em>
