@@ -1,6 +1,7 @@
 
 [('screenshots.html', 'Screenshots'),
  ('features.html', 'Features'),
+ ('faq.html', 'FAQ'),
  ('pubs.html', 'Publications'),
  ('news/', 'News'),
  ('background/', 'Background'),
