@@ -11,8 +11,6 @@
 <a href="http://www.lilypond.org/ftp/">http://www.lilypond.org/ftp/</a> by HTTP. 
 </li></ul>
 
-
-
 <h2>cvs</h2>
 
 For CVS access, see
