@@ -1,3 +1,14 @@
+2003-07-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/about/donate.html: new file
+
+	* site/about/faq.html: new file
+	
+2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/devel/compile/problems.html (href): add OpenBSD
+	stack-protection note.
+
 2003-04-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* site/devel/compile/index.html: add warning.
